# optional-default

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
optional-default/: Cargo.toml
optional-default/src/: derive.rs  lib.rs
partial-default/: Cargo.toml
partial-default/src/: check_helper.rs  derive.rs  lib.rs
partial_default/: Cargo.toml
partial_default/src/: derive.rs  init.rs  lib.rs
