[package]
name = "partial-default"
version = "0.1.0"
edition = "2021"
description = "Helper macro to allow specifying default values for only some of a struct's fields"
license = "MIT"
readme="../README.md"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = {version = "2.0.71", features = ["full"]}
